--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
 	"description": "This is a note managment session maker plugin for Obsidian. This plugin helps you create workflows to review your notes with filtering and ordering tools to match most preferences.",
-	"author": "Pedro Santiago Dominicci",
+	"author": "Pedro Santiago",
 	"authorUrl": "https://github.com/Zenttus",
 	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": true
+	"isDesktopOnly": false
 }
